# final_jzcapa

./: .gitignore  CMakeLists.txt  FindROOT.cmake  README.md  README.txt  main.cpp
Analysis/: CMakeLists.txt  FindROOT.cmake
Analysis/include/: Analysis.h  Containers.h  DataReader.h  Detector.h  EventTimer.h  RPD.h  RPDAnalysis.h  Visualizer.h  WFAnalysis.h  XMLSettingsReader.h  ZDC.h  ZDCAnalysis.h
Analysis/src/: #RPDAnalysis.cpp#  Containers.cpp  DataReader.cpp  Detector.cpp  EventTimer.cpp  RPD.cpp  RPDAnalysis.cpp  Visualizer.cpp  WFAnalysis.cpp  XMLSettingsReader.cpp  ZDC.cpp  ZDCAnalysis.cpp
Analysis/userFunctions/: AnalysisExample.cpp  RPD_Matrix_Analysis.cpp  analysis  analysis.cpp  mphipps2@htc-login.campuscluster.illinois.edu  myAnalysis.cpp  postAnalysis.cpp
MonteCarlo/: #run1.mac#  CMakeLists.txt  ChangeLog  G4History.macro  GNUmakefile  README.md  cluster_run.mac  geometry.mac  run1.mac  run2.mac  run_Toy_Fermi.mac  scan.sh  todo.txt  vis.mac  zdc.cc
MonteCarlo/analysis/: analysis.C  tree_reader.C
MonteCarlo/config/: config.cfg
MonteCarlo/include/: #AnalysisManager.hh#  ActionInitialization.hh  Analysis.hh  AnalysisManager.hh  CherenkovHit.hh  CherenkovSD.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  FastSimModelOpFiber.hh  FiberHit.hh  FiberSD.hh  LinkDef.h  Materials.hh  ModType1.hh  ModType2.hh  ModType3.hh  ModTypeCustom.hh  ModTypeRPD.hh  ModTypeZDC.hh  MyMTRunManager.hh  MyRunManager.hh  PhysicsList.hh  PhysicsMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  QuartzHit.hh  QuartzSD.hh  RpdHit.hh  RpdSD.hh  RunAction.hh  RunMessenger.hh  SharedData.hh  SteppingAction.hh
MonteCarlo/src/: #AnalysisManager.cc#  #DetectorConstruction.cc#  #FiberSD.cc#  #ModTypeRPD.cc#  #PrimaryGeneratorAction.cc#  .#FiberSD.cc  .#Materials.cc  .#ModType  ActionInitialization.cc  AnalysisManager.cc  CherenkovHit.cc  CherenkovSD.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  FastFiberModel.cc  FastSimModelOpFiber.cc  FiberHit.cc  FiberSD.cc  Materials.cc  ModType1.cc  ModType2.cc  ModType3.cc  ModTypeCustom.cc  ModTypeRPD.cc  ModTypeZDC.cc  MyMTRunManager.cc  MyRunManager.cc  OpticalPhysics.cc  PhysicsList.cc  PhysicsMessenger.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  PurgMagTabulatedField3D.cc  QuartzHit.cc  QuartzSD.cc  RpdHit.cc  RpdSD.cc  RunAction.cc  SharedData.cc  (+3 more)
Utils/: Alignment_2018.xml  Alignment_MC.xml  ConfigFile2018.xml  ConfigFileMC.xml  PurgMag3D.TABLE  README.md  Survey_2018.xml  ZDC_AvsC.root  eposPTneut.root  jcapa_env_lxplus.sh  jzcapa_env_uiuc.sh  test.condor
Utils/2018Testbeam_run_info/: 10_List_Targ_MagOn_Lead_ZDC_RPDHalfMiddle_ZDC_ScanHV.txt  11_List_Targ_MagOn_ZDC_RPDHalfMiddle_ZDC_Dpos.txt  12_List_Targ_MagOn_ZDC_RPDHalfMiddle_ZDC_Apos.txt  13_List_Targ_MagOn_ZDC_RPDHalfMiddleHV_ZDC_Dpos.txt  1_ListZDC_RPD_ZDC_FirstScan.txt  2_List_RPD_ZDC_Scan.txt  3_List_ZDC_ZDC_RPD_Scan.txt  4_List_Lead_ZDC_ZDC_RPD_Scan.txt  5_List_Targ_MagOff_ZDC_ZDC_RPD_Scan.txt  6_List_Targ_MagOn_ZDC_RPD_ZDC_Scan.txt  7_List_Targ_MagOff_ZDC_RPD_ZDC_Scan.txt  8_List_ZDC_RPDHalfTop_ZDC_Scan.txt  9_List_ZDC_RPD_HalfMiddle_ZDC_Scan.txt
Utils/2018Timing_data/: scan3.txt  scan4.txt  scan5.txt
Utils/Timing_data/: 2018scan1.txt  2018scan2.txt  2018scan6.txt  MC_0.32GHz.txt  MC_5.0GHz.txt
cmakeModules/: FindCRMC.cmake  FindROOT.cmake  FindXerces.cmake
doxygen/: JCaPA_doxy.cnf  JZCaPA_doxy.cnf  mainpage.md
